--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ rtl                      : # true, false (default) # turns direction of the page
 title                    : "Site Title"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "hxxxn"
 description              : "An amazing website."
 url                      :"https://hxxxn.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
