--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   name             : "Cheol Hun"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Statistics"
-  location         : "Somewhere"
+  location         : "JBNU"
   email            :
   links:
     - label: "Email"
